boardgame-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame-deployment
  labels:
    app: boardgame
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boardgame  
  template:
    metadata:
      labels:
        app: boardgame  
    spec:
      containers: 
      - name: boardgame
        image: devopsproject2.azurecr.io/boardgame-app:latest
        ports:
        - containerPort: 8080 
         
...
