service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: boardgame-deployment-service 
  labels:
    app: boardgame
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: boardgame
...
