statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
 name: boardgame-statefuleset
 labels:
  app: boardgame
spec:
 replicas: 2
 selector:
  matchLabels:
   app: boardgame
 template:
  metadata:
   name: boardgame-statefulset
   labels:
    app: boardgame
  spec:
   containers:
    - name: db-container
      image: postgres:15
      ports:
       - containerPort: 5432
      volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data/pgdata
   volumes:
      - name: postgres-storage
        persistentVolumeClaim:
           claimName: boardgame-pvc

---
apiVersion: v1
kind: Service
metadata:
 name: db-service
 labels:
  app: boardgame
spec:
 type: ClusterIP
 ports:
  - port: 5432
    targetPort: 5432
